@@ -1,3 +1,8 @@
+Overview of changes in Glib <next>
+=================================
+
+* Create and register a GType for GConnectFlags
+
 Overview of changes in Glib 1.252
 =================================
 
